Following issues are resolved 1. RAD-4648: Android>QA(120)>ThinkRight>Journaling>Free form>heading font is not merriweather 2. RAD-4641: Android>QA(120)ThinkRight>Journalling>>Gratitiude>options screen issues 3. RAD-4649: Android>QA(120)>ThinkRight>Journaling>Free form>landing screen issues 4. RAD-4673: Android>QA(120)>ThinkRight>Affirmation>categories popup>cancel button showing on left side 5. RAD-4685: Android>QA(120)>ThinkRight>Mind Audit>Back button shape is not as per design and mind audit icon showing on header 6. RAD-4708: Android>QA(120)>ThinkRight>Mind Audit>Suggested assement screen issues 7. RAD-4710: Android>QA(120)>ThinkRight>Mind Audit>Suggested assement >'You might also like' heading showing 8. RAD-4714: Android>QA(120)>ThinkRight>Mind Audit>Suggested assessment screen>Suggested assessment card(top card) shape is not as per XD 9. RAD-4718: Android>QA(120)>ThinkRight>Mind Audit>PHQ-9, DASS-21, GAD-7, OHQ heading font is not merriweather and CAS back button design is not as per XD 10. RAD-4722: Android>QA(120)>ThinkRight>Mind Audit>PHQ-9, DASS-21, GAD-7, OHQ and CAS>Questionaire screen pink border showing and

--- a/app/src/main/res/layout/activity_freeform.xml
+++ b/app/src/main/res/layout/activity_freeform.xml
@@ -28,15 +28,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Journal"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textSize="20sp"
             android:textColor="@color/txt_color_mind"
             android:layout_centerInParent="true" />
 
         <ImageButton
             android:id="@+id/btnInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/info_affirmation"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_alignParentEnd="true" />
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:paddingHorizontal="16dp">
 
             <!-- Greeting Card -->
             <androidx.cardview.widget.CardView
