--- a/app/src/main/res/layout/activity_grief.xml
+++ b/app/src/main/res/layout/activity_grief.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Journal"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textSize="20sp"
             android:textColor="@color/txt_color_mind"
             android:layout_centerInParent="true" />
