--- a/app/src/main/res/layout/activity_maassessment_questions.xml
+++ b/app/src/main/res/layout/activity_maassessment_questions.xml
@@ -11,19 +11,19 @@
 
         <ImageView
             android:id="@+id/ic_back_dialog"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/ic_leftarrow" />
+            android:layout_marginStart="12dp"
+            android:src="@drawable/icon_back" />
 
         <TextView
             android:id="@+id/tv_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Mind Audit"
             android:textSize="18sp"
             android:textColor="@color/txt_color_mind" />
@@ -47,7 +47,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@drawable/roundedcornerpinkborder_radius10"
+        android:background="#F7F7FC"
         android:orientation="vertical"
         android:layout_marginBottom="-20dp"
         android:layout_marginTop="10dp"
