--- a/app/src/main/res/layout/activity_mind_audit_from.xml
+++ b/app/src/main/res/layout/activity_mind_audit_from.xml
@@ -10,12 +10,12 @@
 
         <ImageView
             android:id="@+id/ic_back_dialog"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/ic_leftarrow" />
+            android:layout_marginStart="12dp"
+            android:src="@drawable/icon_back" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -23,14 +23,15 @@
             android:layout_toLeftOf="@id/tv_header_htw"
             android:src="@drawable/mind_audit"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_header_htw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Mind Audit"
             android:textSize="18sp"
             android:textColor="@color/txt_color_mind" />
