--- a/app/src/main/res/layout/row_suggested_assessment.xml
+++ b/app/src/main/res/layout/row_suggested_assessment.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="1dp">
 
     <LinearLayout
         android:id="@+id/ll_thinkright_category1"
         android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_height="190dp"
         android:layout_margin="8dp"
         android:background="@drawable/roundedcornerbutton_light_pink"
-        android:elevation="5dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="@drawable/roundedcornerbottomshape"
+            android:background="@drawable/rounded_corner_bottom_yellow"
             android:fontFamily="@font/dmsans_regular"
             android:gravity="center"
             android:text="Low"
