Following issues are resolved on 11 Oct 2025 1. RAD-4490: [Android][QA][Profile]Profile Section – No Character Limit for First Name and Last Name Fields 2. RAD-4623: Amdroid>QA(120)>Privacy policy screen> continue button not fitted on the screen 3. RAD-4660: [Android][QA][Onboarding] Incorrect forward arrow icon on trial card 4. RAD-4677: [Android][QA][Onboarding] Green dot over profile image is not part of design 5. RAD-4488: [Android][QA][Home]Home Screen – Section Headings Text Incorrect 6. RAD-4489: [Android][QA][Home] Home Screen – Your Wellness Playlist – Extra Space Between Text and Icon on Playlist Card 7. RAD-4654: [Android][QA][Onboarding] Claim Your Free Trial card border and corners incorrect 8. RAD-4656: [Android][QA][Onboarding] Extra space after name before comma on Home screen 9. RAD-4686: [Android][QA][Onboarding] Missing separator line in Rightlife Edit content list 10. RAD-4688: [Android][QA][Onboarding] Video thumbnail not rendering properly under Rightlife Edit

--- a/app/src/main/res/layout/activity_data_control.xml
+++ b/app/src/main/res/layout/activity_data_control.xml
@@ -1,115 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/btn_continue">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/data_control" />
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:fadeScrollbars="false"
-                android:fillViewport="true">
-            <RelativeLayout
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/data_control" />
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fadeScrollbars="false"
+                    android:fillViewport="true">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_data_control"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/merriweather_bold"
+                            android:gravity="center_horizontal"
+                            android:text="@string/your_data_control"
+                            android:textColor="@color/txt_color_header"
+                            android:textSize="@dimen/textsize_large24sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_data_control"
+                            android:layout_alignStart="@id/tv_data_control"
+                            android:layout_alignEnd="@id/tv_data_control"
+                            android:layout_marginTop="16dp"
+                            android:layout_marginHorizontal="10dp"
+                            android:fontFamily="@font/dmsans_regular"
+                            android:text="@string/data_control_desc1"
+                            android:textColor="@color/txt_color_header"
+                            android:textSize="@dimen/textsize_medium" />
+                    </RelativeLayout>
+                </ScrollView>
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal">
+                android:orientation="horizontal"
+                android:layout_marginHorizontal="16dp"
+                android:gravity="center_vertical">
 
-                <TextView
-                    android:id="@+id/tv_data_control"
-                    android:layout_width="match_parent"
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/ck_privacy_policy"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:fontFamily="@font/merriweather_bold"
-                    android:gravity="center_horizontal"
-                    android:text="@string/your_data_control"
-                    android:textColor="@color/txt_color_header"
-                    android:textSize="@dimen/textsize_large24sp" />
+                    app:buttonTint="@color/checkbox_color"
+                    android:layout_marginEnd="8dp" />
 
+                <!-- TextView -->
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/tv_privacy_policy"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_data_control"
-                    android:layout_alignStart="@id/tv_data_control"
-                    android:layout_alignEnd="@id/tv_data_control"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginHorizontal="10dp"
+                    android:autoLink="web"
+                    android:textColorLink="@color/nuraBlue"
                     android:fontFamily="@font/dmsans_regular"
-                    android:text="@string/data_control_desc1"
-                    android:textColor="@color/txt_color_header"
-                    android:textSize="@dimen/textsize_medium" />
-            </RelativeLayout>
-            </ScrollView>
+                    android:textSize="11sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/ck_terms_conditions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:buttonTint="@color/checkbox_color"
+                    android:layout_marginEnd="8dp" />
+
+                <!-- TextView -->
+                <TextView
+                    android:id="@+id/tv_terms_condition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/dmsans_regular"
+                    android:autoLink="web"
+                    android:textColorLink="@color/nuraBlue"
+                    android:textSize="11sp" />
+            </LinearLayout>
         </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical">
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/ck_privacy_policy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp" />
-
-        <!-- TextView -->
-        <TextView
-            android:id="@+id/tv_privacy_policy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            android:textColorLink="@color/nuraBlue"
-            android:fontFamily="@font/dmsans_regular"
-            android:textSize="11sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/ck_terms_conditions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:buttonTint="@color/checkbox_color"
-            android:layout_marginEnd="8dp" />
-
-        <!-- TextView -->
-        <TextView
-            android:id="@+id/tv_terms_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/dmsans_regular"
-            android:autoLink="web"
-            android:textColorLink="@color/nuraBlue"
-            android:textSize="11sp" />
-    </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/btn_continue"
@@ -121,7 +135,8 @@
         android:fontFamily="@font/dmsans_bold"
         android:enabled="false"
         android:gravity="center"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:backgroundTint="@color/rightlife" />
-</LinearLayout>
+</RelativeLayout>
