--- a/app/src/main/res/layout/activity_profile_new.xml
+++ b/app/src/main/res/layout/activity_profile_new.xml
@@ -91,6 +91,7 @@
             android:background="@drawable/edittext_bg"
             android:padding="12dp"
             android:textSize="16sp"
+            android:maxLength="30"
             android:inputType="textPersonName"
             android:fontFamily="@font/dmsans_regular"
             android:textColor="@color/txt_color_mind" />
@@ -113,6 +114,7 @@
             android:background="@drawable/edittext_bg"
             android:padding="12dp"
             android:textSize="16sp"
+            android:maxLength="30"
             android:inputType="textPersonName"
             android:fontFamily="@font/dmsans_regular"
             android:textColor="@color/txt_color_mind" />
