Following issues are resolved on 11 Oct 2025 1. RAD-4738: Android>QA(120)>ThinkRight>Mind Audit>Result screen>Others option screen issues 2. RAD-4757: [Android][QA][Home] Incorrect forward icon in Jump Back section 3. RAD-4758: [Android][QA][Home] Jump Back section text “All” should be capitalized as “All” not “ALL” 4. RAD-4759: [Android][QA][Home] Jump Back section dropdown animation not as per design when tapping on “All” 5. RAD-4761: [Android][QA][Home] “Select Category” text present in dropdown but missing in design 6. RAD-4763: [Android][QA][Home] Incorrect toast UI when tapping bookmark in Jump Back section 7. RAD-4764: [Android][QA][Home] Blank toast message when bookmarking an article 8. RAD-4774: [Android][QA][Home] Jump Back section text font incorrect 9. RAD-4864: [Android][QA][Profile]Multiple weight selection popups appear on tapping weight field repeatedly in Profile section 10. RAD-4865: [Android][QA][Profile]Multiple age selection popups appear on tapping age field repeatedly in Profile section 11. RAD-4866: [Android][QA][Profile]Multiple gender selection popups appear on tapping gender field repeatedly in Profile section 12. RAD-4867: [Android][QA][Profile]Multiple height selection popups appear on tapping height field repeatedly in Profile section

--- a/app/src/main/res/layout/fragment_home_explore.xml
+++ b/app/src/main/res/layout/fragment_home_explore.xml
@@ -46,7 +46,7 @@
                     android:id="@+id/img_jump_back_in_next"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/next_arrow_dashboard"
+                    android:src="@drawable/forward_arrow_free_trial"
                     android:layout_margin="16dp"
                     android:layout_alignParentEnd="true" />
 
@@ -56,7 +56,7 @@
                     android:layout_margin="16dp"
                     android:text="Jump Back In"
                     android:textSize="18sp"
-                    android:fontFamily="@font/dmsans_bold"
+                    android:fontFamily="@font/merriweather_bold"
                     android:textColor="@color/txt_color_header" />
 
                 <androidx.recyclerview.widget.RecyclerView
