--- a/app/src/main/res/layout/popup_jump_back_in.xml
+++ b/app/src/main/res/layout/popup_jump_back_in.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="250dp"
+    android:layout_width="280dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/rounded_corner_gray_stroke"
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:padding="8dp">
 
         <TextView
@@ -35,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#A2A2A2"
-        android:layout_marginVertical="8dp" />
+        android:layout_marginVertical="8dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tvAll"
