--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -4,81 +4,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:src="@drawable/right_life_black" />
-
-        <!-- ViewPager2 for Image Slider -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager_image_slider"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_margin="16dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <!-- TabLayout for dots -->
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            app:tabGravity="center"
-            android:visibility="gone"
-            app:tabIndicatorHeight="0dp" />
-        <com.zhpan.indicator.IndicatorView
-            android:id="@+id/indicator_view_pager"
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:src="@drawable/right_life_black" />
+
+            <!-- ViewPager2 for Image Slider -->
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_image_slider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
+
+            <!-- TabLayout for dots -->
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:tabGravity="center"
+                android:visibility="gone"
+                app:tabIndicatorHeight="0dp" />
+
+            <com.zhpan.indicator.IndicatorView
+                android:id="@+id/indicator_view_pager"
+                android:layout_width="wrap_content"
+                android:layout_margin="10dp"
+                android:visibility="gone"
+                android:layout_height="wrap_content" />
+
+
+            <com.zhpan.bannerview.indicator.DrawableIndicator
+                android:id="@+id/indicator_view_pager1"
+                android:layout_width="wrap_content"
+                android:layout_margin="7dp"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/btn_google"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:text="@string/continue_google"
+                android:textColor="@color/txt_color_header"
+                android:drawableStart="@drawable/google_image"
+                android:textSize="@dimen/textsize_medium"
+                android:fontFamily="@font/dmsans_bold"
+                android:gravity="center"
+                android:drawablePadding="8dp"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bg_google_btn" />
+
+
+        </LinearLayout>
+
+        <ProgressBar
             android:layout_width="wrap_content"
-            android:layout_margin="10dp"
+            android:id="@+id/progress_bar_login"
             android:visibility="gone"
-            android:layout_height="wrap_content"/>
-
-
-
-        <com.zhpan.bannerview.indicator.DrawableIndicator
-            android:id="@+id/indicator_view_pager1"
-            android:layout_width="wrap_content"
-            android:layout_margin="7dp"
-            android:layout_height="wrap_content"/>
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/btn_google"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:text="@string/continue_google"
-            android:textColor="@color/txt_color_header"
-            android:drawableStart="@drawable/google_image"
-            android:textSize="@dimen/textsize_medium"
-            android:fontFamily="@font/dmsans_bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="By signing up, I agree to RightLife’s Terms of Service &amp; Privacy Policy."
+            android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:drawablePadding="8dp"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/bg_google_btn"/>
-
-
-
-
-    </LinearLayout>
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:id="@+id/progress_bar_login"
-        android:visibility="gone"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content"/>
-</RelativeLayout>
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="10sp"
+            android:layout_marginBottom="16dp" />
+    </RelativeLayout>
 </ScrollView>
