--- a/app/src/main/res/layout/activity_new_categorylist.xml
+++ b/app/src/main/res/layout/activity_new_categorylist.xml
@@ -88,6 +88,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp" />
+
+        <TextView
+            android:id="@+id/tvNoData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No items available"
+            android:textSize="22sp"
+            android:fontFamily="@font/dmsans_bold"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 </LinearLayout>
