--- a/app/src/main/res/layout/row_category_list_new.xml
+++ b/app/src/main/res/layout/row_category_list_new.xml
@@ -38,7 +38,7 @@
                     android:layout_height="12dp"
                     android:src="@drawable/correct_green"
                     android:layout_alignParentEnd="true"
-                    android:layout_margin="8dp"/>
+                    android:layout_margin="8dp" />
 
                 <LinearLayout
                     android:id="@+id/llVideoSeries"
@@ -98,16 +98,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginVertical="16dp">
+        android:layout_marginVertical="16dp"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/dmsans_regular"
             android:textSize="@dimen/textsize_small"
             android:layout_weight="1"
             android:gravity="center"
+            android:maxLines="2"
             android:text="asdaskjdjakjsda"
             android:textColor="#767676" />
 
