--- a/app/src/main/res/layout/row_jump_back_in_horrizontal.xml
+++ b/app/src/main/res/layout/row_jump_back_in_horrizontal.xml
@@ -90,12 +90,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginVertical="16dp">
+        android:layout_marginVertical="16dp"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/tvName"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/dmsans_regular"
             android:textSize="@dimen/textsize_small"
             android:layout_weight="1"
