Following issues are resolved on 12 Oct 2025 1. EnableNotificationActivity button issue resolved 2. RAD-4779: [Android][QA][Home] Claim your free trial popup images in incorrect order 3. RAD-4719: Android>QA(120)>ThinkRight>Mind Audit>PHQ-9 Red flag is not showing

--- a/app/src/main/res/layout/activity_enable_notification.xml
+++ b/app/src/main/res/layout/activity_enable_notification.xml
@@ -272,7 +272,7 @@
         android:id="@+id/btn_enable_notification"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_below="@id/scollView"
+        android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="36dp"
         android:layout_marginVertical="24dp"
         android:backgroundTint="@color/menuselected"
