--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -410,6 +410,7 @@
         android:layout_width="match_parent"
         android:layout_marginBottom="77dp"
         android:layout_gravity="bottom"
+        android:visibility="gone"
         android:layout_alignParentBottom="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
