--- a/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_dass21_result.xml
@@ -21,6 +21,7 @@
             android:layout_centerInParent="true"
             android:fontFamily="@font/merriweather_bold"
             android:gravity="center"
+            android:id="@+id/title_toolbar"
             android:textColor="@color/txt_color_mind"
             android:layout_marginStart="4dp" />
 
@@ -362,7 +363,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:layout_margin="12dp"
+                        android:layout_marginVertical="12dp"
                         app:cardCornerRadius="@dimen/margin_card_16dp"
                         android:elevation="5dp"
                         android:id="@+id/cardview_mainscore"
